@@ -6,4 +6,7 @@ export(cppfunction)
 importFrom( utils, capture.output )
 
 importFrom( inline, cfunction )
+exportMethods( getDLL )
+exportClasses( Module )
+export( Module )
 
